Changed Interaction with Nest

--- a/configs/simulation.config
+++ b/configs/simulation.config
@@ -1,8 +1,8 @@
-#Mon Apr 26 14:48:44 CEST 2021
-likelihoodOfFoodDisappearingAfterBeingCollected=0.5
-canvasSizeY=600
-foodSpawnsAtStart=50
-canvasSizeX=600
+#Fri Jul 02 12:31:43 CEST 2021
+likelihoodOfFoodDisappearingAfterBeingCollected=1
+canvasSizeY=1000
+foodSpawnsAtStart=30
+canvasSizeX=1000
 numberOfColoniesAtStart=3
 radiusOfFoodComparedToCanvasSize=0.05
-likelihoodOfFoodSpawnPerIteration=0.01
+likelihoodOfFoodSpawnPerIteration=0.005
