--- a/configs/colony2.config
+++ b/configs/colony2.config
@@ -1,17 +1,17 @@
-#Mon Apr 19 17:49:13 CEST 2021
+#Fri Jul 02 12:07:57 CEST 2021
 halfSenseConeAngle=60.0
 maxLifetimeRandom=2000
 trailColorToFood=pink
 maxTimeAwayFromNestFixed=1000
 trailStrength=100
+trailColorToNest=white
 antColor=blue
-trailColorToNest=lightGray
 antsAtStart=200
 senseRadius=10
 maxTrailStrength=500
 name=orangeAnts
 maxRotation=10.0
-maxRandomRotation=20.0
+maxRandomRotation=10.0
 newAntsPerReturnedFood=0.3
 maxLifetimeFixed=3000
 maxTimeAwayFromNestRandom=250
